pmd fixes